--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- add table here -->
-	<table  border="1" id="table">
+	<table  id="table">
 	
 			<tr id="heading">
 				<th>NAME</th>
