--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 	<table  id="table">
 	
 			<tr id="heading">
-				<th>NAME</th>
-				<th>KILLS</th>
-				<th>SAVED</th>
-				<th>DEATHS</th>
-				<th>REVIVES</th>
-				<th>WIN</th>
+				<thead>NAME</thead>
+				<thead>KILLS</thead>
+				<thead>SAVED</thead>
+				<thead>DEATHS</thead>
+				<thead>REVIVES</thead>
+				<thead>WIN</thead>
 			</tr>
 		<tr>
 			<td>Hackerman</td>
