--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
     <!-- add table here -->
 	<table  id="table">
 	
-			<tr id="heading">
-				<thead>NAME</thead>
-				<thead>KILLS</thead>
-				<thead>SAVED</thead>
-				<thead>DEATHS</thead>
-				<thead>REVIVES</thead>
-				<thead>WIN</thead>
-			</tr>
+			<thead id="heading">
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
+			</thead>
 		<tr>
 			<td>Hackerman</td>
 			<td>10</td>
